logs/zope.xmlpickle.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/xmlpickle'...
Compiling './lib/python3.5/site-packages/zope/xmlpickle/ppml.py'...
***   File "./lib/python3.5/site-packages/zope/xmlpickle/ppml.py", line 177
    return `self._v`
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zope/xmlpickle/tests'...
Compiling './lib/python3.5/site-packages/zope/xmlpickle/tests/test_xmlpickle.py'...
***   File "./lib/python3.5/site-packages/zope/xmlpickle/tests/test_xmlpickle.py", line 84
    for v in (-2000000000l, -70000l, -30000l, -3000l, -100l, -99l, -1l,
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zope.xmlpickle-3.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
